<resources>
    <string name="app_name">Alipay</string>
    <string name="qr_transaction">QR Transaction</string>
    <string name="check_status">Check Status</string>
    <string name="dismiss">Dismiss</string>

    <string name="number_zero">0</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_backspace">Back</string>
    <string name="pin_number">Pin number</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="amount">Enter amount</string>
    <string name="pay">Pay</string>
    <string name="action_footer">Action footer</string>
    <string name="purchase">Purchase</string>
    <string name="purchase_card">Purchase card</string>
    <string name="amount_lbl">Amount</string>
    <string name="swipe">Swipe</string>
    <string name="insert">Insert</string>
    <string name="tap">Tap</string>
    <string name="enter_pin">Please enter pin</string>
    <string name="enter_pin_bypass">Press enter to bypass</string>
    <string name="refund">REFUND</string>
    <string name="refund_lbl">Refund</string>
    <string name="cancel_trans">CANCEL TRANSACTION</string>
    <string name="cancel_trans_lbl">Cancel transaction</string>
    <string name="authorization">AUTHORIZATION</string>
    <string name="purchase_advice">PURCHASE ADVICE</string>
    <string name="settlement">SETTLEMENT</string>
    <string name="network_login">NETWORK LOGIN</string>
    <string name="merchant_menu">MERCHANT MENU</string>
    <string name="merchant_menu_lbl">Merchant menu</string>
    <string name="admin_menu">ADMIN MENU</string>
    <string name="admin_menu_lbl">Admin menu</string>
    <string name="enter_merchant_password">Enter merchant password</string>
    <string name="password">Password</string>
    <string name="merchant_login">Merchant login</string>
    <string name="admin_login">Admin login</string>
    <string name="more_option">More option</string>
    <string name="card_pay">Card Payment</string>
    <string name="enter_receipt_number">Enter receipt number</string>
    <string name="receipt_number">Receipt number</string>
    <string name="enter_admin_password">Enter admin password</string>
    <string name="purchase_pin">Purchase pin</string>

</resources>
