<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.Cancellation">
    <include
        android:id="@+id/tool_bar"
        layout="@layout/toolbar"
        ></include>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/amt_layout"
        android:layout_above="@+id/keyboard"
        android:gravity="center">

        <TextView
            android:id="@+id/pin_lbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_pin"
            android:textSize="@dimen/twenty"
            android:gravity="center"
            android:visibility="gone"
            android:textColor="@color/black_overlay"
            android:fontFamily="sans-serif-condensed-medium"/>


        <androidx.cardview.widget.CardView
            android:id="@+id/pin_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/thirty"
            android:layout_below="@+id/pin_lbl"
            android:layout_marginTop="@dimen/ten"
            android:layout_marginRight="@dimen/twenty"
            android:layout_marginLeft="@dimen/twenty"
            android:layout_marginBottom="@dimen/ten"
            app:cardElevation="5dp"
            app:cardBackgroundColor="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/eighteen"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:textColorHint="@color/black_overlay"
                    android:textColor="@color/black"
                    android:hint="@string/receipt_number"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="@dimen/eighteen"
                    android:inputType="text"
                    android:maxLength="4"
                    android:background="@null"/>
            </LinearLayout>


        </androidx.cardview.widget.CardView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_receipt_number"
            android:textSize="@dimen/twenty"
            android:gravity="center"
            android:layout_below="@id/pin_layout"
            android:textColor="@color/black_overlay"
            android:fontFamily="sans-serif-condensed-medium"/>

    </RelativeLayout>



    <com.techcamino.pay.alipay.widget.CardKeyboard
        android:id="@+id/keyboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_above="@+id/footer"/>

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/grad_dusk_start"
        android:gravity="center"
        android:layout_alignParentBottom="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_footer"
            android:textSize="@dimen/twenty"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-condensed-medium"/>

    </RelativeLayout>

</RelativeLayout>